Bug 1165807 - display WeakSet and WeakMap contents in console; r=bz,fitzgen

--HG--
extra : commitid : 21J7fnJqwm5
extra : rebase_source : 95bf00beb87284b27c22c7497aa73ded0f05bfe2